Fixed spinner not showing up properly/ now using SVG for spinner from icon library

--- a/Code/app/styles/theme.css
+++ b/Code/app/styles/theme.css
@@ -79,21 +79,6 @@
     color: #3a87ad;
     font-weight: 800;
 }
-
-.wait #spinner {
-    visibility: visible;
-    opacity: 1;
-}
-
-#spinner {
-    visibility: hidden;
-    transition: opacity 500ms linear;
-    opacity: 0;
-    width: 10%;
-    margin: 10% 40%;
-    position: absolute;
-}
-
 right {
     margin-left: 1em;
 }
